# dockerfile-python

./: README.md  pyproject.toml
src/dockerfile_python/: docker_generator.py  main.py  scanner.py  template_handler.py
src/dockerfile_python/templates/: .dockerignore.template  Dockerfile.template  entrypoint.sh.template
